// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stage page component should render with caption when passed in props 1`] = `
<Stage
  caption="MY_CAPTION"
  dispatch={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "payload": Object {
              "url": "/",
            },
            "type": "UPDATE_LOCATION",
          },
        ],
      ],
    }
  }
  match={
    Object {
      "url": "/",
    }
  }
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-full"
    >
      <h1
        className="govuk-heading-l"
      />
    </div>
  </div>
</Stage>
`;

exports[`Stage page component should render with default props 1`] = `
<Stage
  dispatch={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "payload": Object {
              "url": "/",
            },
            "type": "UPDATE_LOCATION",
          },
        ],
      ],
    }
  }
  match={
    Object {
      "url": "/",
    }
  }
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-full"
    >
      <h1
        className="govuk-heading-l"
      />
    </div>
  </div>
</Stage>
`;
